// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountList actions should fetchAccountsStatus 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "error": "Cannot read property 'data' of undefined",
      },
      "type": "INVENTORY_ACCOUNT_STATUS_POLLING_ERROR",
    },
  ],
]
`;

exports[`AccountList actions should restartProcess 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "accountID": "some-account-ID",
        "processStatusName": "generate_report_status",
      },
      "type": "INVENTORY_PROCESS_RESTART",
    },
  ],
]
`;

exports[`AccountList actions should startAccountStatusPolling 1`] = `
Object {
  "payload": Object {
    "pollingProcessID": 0,
  },
  "type": "INVENTORY_ACCOUNT_STATUS_POLLING_START",
}
`;

exports[`AccountList actions should stopAccountStatusPolling 1`] = `
Array [
  Array [
    Object {
      "type": "INVENTORY_ACCOUNT_STATUS_POLLING_STOP",
    },
  ],
]
`;
